--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@asymmetrik/ngx-leaflet": "^5.0.1",
     "@ionic-native/camera": "^4.19.0",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/geolocation": "^4.19.0",
@@ -37,12 +38,14 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "leaflet": "^1.4.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@types/leaflet": "^1.2.14",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -64,5 +67,8 @@
     "platforms": [
       "android"
     ]
+  },
+  "config": {
+    "ionic_copy": "copy.config.js"
   }
 }
